tests/error/errors_on_usage/protocols.err
Error: Unsupported (at $FILE:20:8)
   | 
18 | @guppy
19 | def main() -> None:
20 |     bar(FooStruct())
   |         ^^^^^^^^^^^ Protocol checking is not supported

Guppy compilation failed due to 1 previous error
